# raef

./: .gitignore  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.dev
docs/: raef-architecture-revision.html
docs/artifacts/2026-07-16-crash-matrix/: README.md  crash_matrix_summary.json  crash_matrix_table.txt
docs/artifacts/2026-07-16-improvements/: README.md  cli_transcript.txt  db_verification.txt  demo1_crash.txt  demo2_ambiguous.txt  demo3_lost.txt  evaluation_summary_demo2.json  evaluation_timing_demo1.txt  quality_gates.txt
docs/artifacts/2026-07-16-run/: README.md  evaluation_summary.json  evaluation_timing.txt
example/: crash_recovery_e2e.py  openrouter_crash_recovery_e2e.py  sample_agent_openrouter.py  sample_agent_openrouter_mock.py
scripts/: bootstrap.sh
src/raef/: __init__.py  agent_state.py  cli.py  decorators.py  evaluation.py  logging_observability.py  logging_service.py  models.py  planner_state.py  runtime_store.py  txn_manager.py  utils.py  verifier.py  wal.py
src/raef/adapters/: __init__.py  decorators.py  langchain_adaptor.py
src/raef/recovery/: common.py
src/raef/recovery/health/: base.py  file_checker.py  http_checker.py
src/raef/recovery/monitor/: pulse_monitor.py
src/raef/recovery/recovery/: check_helper.py  handler.py  strategy.py
src/raef/tools/: __init__.py  crash_simulator.py  mock_agent.py  mock_store_mod.py  mock_target.py  mock_target_cli.py  mock_target_mcp.py  real_llm_api.py
tests/: evaluation_test.py  test_cli.py  test_crash_matrix.py  test_recovery.py  test_recovery_verification.py  test_txn_manager.py  test_verifier.py  test_wal.py
